# agent-tool-audit

./: .gitignore  README.md  pyproject.toml
agent_tool_audit/: __init__.py  cli.py  rules.py  scanner.py
tests/: test_cli.py  test_rules.py  test_scanner.py
tests/fixtures/: clean_mcp.json  openai_style.json  risky_mcp.json
